plugins {
    id 'java'
    id 'application'
}

version = '1.0.0'


java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
// https://mvnrepository.com/artifact/io.javalin/javalin-bundle
    implementation group: 'io.javalin', name: 'javalin-bundle', version: '6.4.0'
    // https://mvnrepository.com/artifact/io.javalin/javalin-rendering
    implementation group: 'io.javalin', name: 'javalin-rendering', version: '6.4.0'

    implementation 'org.thymeleaf:thymeleaf:3.1.3.RELEASE'

    // https://mvnrepository.com/artifact/com.h2database/h2
    implementation 'com.h2database:h2:2.3.232'
    implementation group: 'org.sql2o', name: 'sql2o', version: '1.5.4'
    implementation group: 'org.slf4j',name: 'slf4j-simple', version: '1.7.21'
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'

// https://mvnrepository.com/artifact/org.jasypt/jasypt
    implementation group: 'org.jasypt', name: 'jasypt', version: '1.9.2'

}

application {
    mainClass = 'Main' // Replace with your main class
}
